<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.caciocavallosilano</groupId>
  <artifactId>cacio</artifactId>
  <version>1.11</version>
  <packaging>pom</packaging>

  <name>Caciocavallo Main Module</name>
  <description>Portable GUI backends for Java</description>
  <url>https://github.com/CaciocavalloSilano/caciocavallo</url>

  <licenses>
    <license>
      <name>GPL2 with classpath exception</name>
      <url>http://openjdk.java.net/legal/gplv2+ce.html</url>
      <distribution>repo</distribution>
      <comments>GPL2 with special linking exception</comments>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:ssh://git@github.com/CaciocavalloSilano/caciocavallo.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/CaciocavalloSilano/caciocavallo.git</developerConnection>
    <url>https://github.com/CaciocavalloSilano/caciocavallo</url>
    <tag>cacio-1.11</tag>
  </scm>

  <developers>
    <developer>
      <id>gschrader</id>
      <name>Glen Schrader</name>
      <email>gschrader@gmail.com</email>
      <url>https://glenschrader.com</url>
    </developer>
  </developers>

  <modules>
    <module>cacio-shared</module>
    <module>cacio-tta</module>
  </modules>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <additionalOptions>
            <additionalOption>-XDignore.symbol.file=true</additionalOption>
            <additionalOption>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.desktop/sun.font=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.base/sun.security.action=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</additionalOption>
            <additionalOption>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</additionalOption>
          </additionalOptions>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>1.6.3</version>
          <extensions>true</extensions>
          <configuration>
            <serverId>ossrh</serverId>
            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
            <autoReleaseAfterClose>true</autoReleaseAfterClose>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <source>11</source>
            <target>11</target>
            <compilerArgs>
              <arg>-XDignore.symbol.file=true</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.12</version>
          <configuration>
	    <runOrder>random</runOrder>
            <systemPropertyVariables>
              <java.awt.headless>false</java.awt.headless>
              <awt.toolkit>CTCToolkit</awt.toolkit>
              <java.awt.graphicsenv>CTCGraphicsEnvironment</java.awt.graphicsenv>
            </systemPropertyVariables>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <profiles>
    <profile>
      <id>release-sign-artifacts</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
